# pathtracer

./: CMakeLists.txt  CONSTS.h  Intersectable.h  Mat3.h  SmoothThing.cpp  SmoothThing.h  SmoothTriangle.cpp  SmoothTriangle.h  Thing.cpp  Thing.h  Triangle.cpp  Triangle.h  cube.h  main.cpp  myTeapot.h  swIntersection.cpp  swIntersection.h  swMaterial.h  swScene.cpp  swScene.h  swSphere.h  swVec3.h
